[gd_scene load_steps=5 format=3 uid="uid://blgivn0u628fu"]

[ext_resource type="Script" uid="uid://jk4y3t3rplve" path="res://Scripts/runestone.gd" id="1_jyrfv"]
[ext_resource type="Texture2D" uid="uid://qf2utkjrpxiq" path="res://Assets/Outdoor decoration/ancient_tablet.png" id="1_lypik"]
[ext_resource type="Script" uid="uid://jsd6o8omlw5a" path="res://Scripts/pickup_component.gd" id="3_57t8c"]


[sub_resource type="RectangleShape2D" id="RectangleShape2D_lypik"]

[node name="RuneStone" type="Node2D"]
position = Vector2(100, 0)
script = ExtResource("1_jyrfv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(300, 100)
scale = Vector2(0.013, 0.013)
texture = ExtResource("1_lypik")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lypik")

[node name="PickupComponent" type="Node" parent="."]
script = ExtResource("3_57t8c")
