[gd_scene load_steps=6 format=3 uid="uid://4qgoaa3ivu3f"]

[ext_resource type="Texture2D" uid="uid://bfc7bh6qqpijg" path="res://Assets/Icons/16x16.png" id="1_3gh14"]
[ext_resource type="Script" uid="uid://cm56dlug2rgkd" path="res://Scripts/resource.gd" id="1_fd6rm"]
[ext_resource type="Script" uid="uid://dn7al0ge7nn5y" path="res://Scripts/hitbox_component.gd" id="2_qdacp"]
[ext_resource type="Script" uid="uid://jsd6o8omlw5a" path="res://Scripts/pickup_component.gd" id="3_fd6rm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bmhhg"]
radius = 2.13524
height = 9.90748

[node name="StoneAxe" type="Node2D"]
script = ExtResource("1_fd6rm")
resource_name = "StoneAxe"
health = 10

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_3gh14")
region_enabled = true
region_rect = Rect2(240, 1456, 16, 16)

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("2_qdacp")
metadata/_custom_type_script = "uid://dn7al0ge7nn5y"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, 1)
rotation = 0.805704
shape = SubResource("CapsuleShape2D_bmhhg")

[node name="PickupComponent" type="Node" parent="."]
script = ExtResource("3_fd6rm")
item_name = "StoneAxe"
metadata/_custom_type_script = "uid://jsd6o8omlw5a"
